--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "webfactory/kernelintegration-bundle",
+    "name": "webfactory/legacyintegration-bundle",
     "autoload": {
-        "psr-0": { "Webfactory\\Bundle\\KernelIntegrationBundle": "" }
+        "psr-0": { "Webfactory\\Bundle\\LegacyIntegrationBundle": "" }
     },
-    "target-dir": "Webfactory/Bundle/KernelIntegrationBundle",
+    "target-dir": "Webfactory/Bundle/LegacyIntegrationBundle",
     "require": {
         "symfony/css-selector": "2.0.10",
         "symfony/dom-crawler": "2.0.10"
