Legacyintegration-Bundle verwendet nun webfactory/dom. Case 12325

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
+
     "name": "webfactory/legacyintegration-bundle",
     "autoload": {
         "psr-0": { "Webfactory\\Bundle\\LegacyIntegrationBundle": "" }
     },
     "target-dir": "Webfactory/Bundle/LegacyIntegrationBundle",
     "require": {
-        "symfony/css-selector": "2.0.10",
-        "symfony/dom-crawler": "2.0.10"
+	"webfactory/dom": "1.0.*"
     }
 }
