Refaktorisierungen und Tweaks.
- FragementalResponse als Basisklasse entfernt, dafuer XPath-Helper eingefuehrt
- LegacyApplication arbeitet auf Basis des HttpKernelInterface.
- Adapter fuer "Bootstrap-Files" -> HttpKernelInterface eingefuehrt
- Interne Abhaengigkeiten aufgeraeumt

Alle Aenderungen BC-compliant, solange Projekte nur das bootstrap-File ueber
die Configuration setzen und in Twig
"legacyApplication.fragementalResponse.fragment" benutzen.

Neu: "legacyApplication.xpath(...)" in Twig.

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,17 @@
 {
 
     "name": "webfactory/legacyintegration-bundle",
+
     "autoload": {
         "psr-0": { "Webfactory\\Bundle\\LegacyIntegrationBundle": "" }
     },
+
     "target-dir": "Webfactory/Bundle/LegacyIntegrationBundle",
+
     "require": {
-	"webfactory/dom": "1.0.*"
+	"webfactory/dom": "~1.0, >= 1.0.15"
     },
+
     "extra": {
         "branch-alias": {
             "dev-default": "1.0.x-dev"
