--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 
-    "name": "webfactory/legacyintegration-bundle",
+    "name": "webfactory/legacy-integration-bundle",
 
     "autoload": {
         "psr-0": { "Webfactory\\Bundle\\LegacyIntegrationBundle": "" }
@@ -9,13 +9,15 @@
     "target-dir": "Webfactory/Bundle/LegacyIntegrationBundle",
 
     "require": {
-	"webfactory/dom": "~1.0, >= 1.0.15"
-    },
+        "symfony/framework-bundle": "~2.2",
+        "symfony/dependency-injection": "~2.2",
+        "symfony/config": "~2.2",
+        "symfony/http-kernel": "~2.2",
+        "symfony/http-foundation": "~2.2",
+        "doctrine/annotations": "~1.0",
+        "webfactory/dom": "~1.0, >= 1.0.15",
+        "twig/twig": "~1.10"
 
-    "extra": {
-        "branch-alias": {
-            "dev-default": "1.0.x-dev"
-        }
     }
 
 }
