--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/http-foundation": "~2.2",
         "doctrine/annotations": "~1.0",
         "webfactory/dom": "~1.0, >= 1.0.15",
-        "twig/twig": "~1.10"
+        "twig/twig": "^1.23"
 
     }
 
