--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/framework-bundle": "2.8.*|3.4.*|^4.0",
         "symfony/http-foundation": "2.8.*|3.4.*|^4.0",
         "symfony/http-kernel": "2.8.*|3.4.*|^4.0",
-        "twig/twig": "^1.23",
+        "twig/twig": "^1.34|^2.0",
         "webfactory/dom": "~1.0, >= 1.0.15"
     }
 
