Declare missing ext-tidy dependency

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
 
     "require": {
+        "ext-tidy": "*",
         "doctrine/annotations": "~1.0",
         "psr/container": "^1.0",
         "psr/log": "^1.0",
