--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
         "symfony/service-contracts": "^1.0|^2.0|^3.0",
         "twig/twig": "^1.34|^2.0|^3.0",
         "webfactory/dom": "~1.0, >= 1.0.15"
+    },
+    "conflict": {
+        "php": "<7.0"
     }
-
 }
