--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,16 @@
         "doctrine/annotations": "~1.0",
         "psr/container": "^1.0",
         "psr/log": "^1.0",
-        "symfony/config": "^4.3|^5.0|^6.0",
-        "symfony/dependency-injection": "^4.3|^5.0|^6.0",
-        "symfony/framework-bundle": "3.4.*|^4.0|^5.0|^6.0",
-        "symfony/http-foundation": "^4.0|^5.0|^6.0",
-        "symfony/http-kernel": "^4.3|^5.0|^6.0",
-        "symfony/service-contracts": "^1.0|^2.0",
+        "symfony/config": "^4.3|^5.0|^6.0|^7.0",
+        "symfony/dependency-injection": "^4.3|^5.0|^6.0|^7.0",
+        "symfony/framework-bundle": "3.4.*|^4.0|^5.0|^6.0|^7.0",
+        "symfony/http-foundation": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/http-kernel": "^4.3|^5.0|^6.0|^7.0",
+        "symfony/service-contracts": "^1.0|^2.0|^3.0",
         "twig/twig": "^1.34|^2.0|^3.0",
         "webfactory/dom": "~1.0, >= 1.0.15"
+    },
+    "conflict": {
+        "php": "<7.0"
     }
-
 }
